--- a/robotnordic.css
+++ b/robotnordic.css
@@ -822,7 +822,8 @@ option {
   background: url(img/infoknap.png);
   background-repeat: no-repeat;
   border-radius: 100%;
-  margin-left: 300px;
+  margin-left: 80%;
+  margin-top: 7%;
   position: absolute;
 }
 .modal {
