--- a/robotnordic.css
+++ b/robotnordic.css
@@ -817,13 +817,11 @@ option {
 /*ccs for infoknap*/
 /* The Modal (baggrund) */
 #myBtn {
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   background: url(img/infoknap.png);
   background-repeat: no-repeat;
   border-radius: 100%;
-  margin-left: 80%;
-  margin-top: 7%;
   position: absolute;
 }
 .modal {
@@ -862,6 +860,24 @@ option {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.palleinfo button {
+  margin-left: 75%;
+  margin-top: 7%;
+}
+
+#myDropdown button {
+  margin-left: 80%;
+  margin-top: 8%;
+}
+#myDropdown2 button {
+  margin-left: 80%;
+  margin-top: 8%;
+}
+
+.palledimensionerinfoknap button {
+  margin-left: 80%;
 }
 
 /* slidshow*/
