--- a/robotnordic.css
+++ b/robotnordic.css
@@ -477,7 +477,7 @@ input {
 }
 
 #formularvalg {
-  width: 85%;
+  width: 80%;
   height: 30px;
   border-radius: 5px;
   border: 1px solid #717171;
@@ -561,12 +561,13 @@ option {
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: #F25835;
+  background-color: #white;
+  border: solid 1.5px #313C40;
 }
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
-  background-color: #F25835;
+  background-color: #white;
 }
 
 /* When the checkbox is checked, add a blue background */
