--- a/robotnordic.css
+++ b/robotnordic.css
@@ -826,8 +826,14 @@ option {
   background: url(img/infoknap.png);
   background-repeat: no-repeat;
   border-radius: 100%;
-  position: absolute;
 }
+
+.Pallenavntemp {
+  position: relative;
+  display: inline;
+  float: right;
+}
+
 .modal {
   display: none;
   position: fixed;
