--- a/robotnordic.css
+++ b/robotnordic.css
@@ -820,7 +820,7 @@ option {
 
 /*ccs for infoknap*/
 /* The Modal (baggrund) */
-#myBtn {
+.modal-button {
   width: 28px;
   height: 28px;
   background: url(img/infoknap.png);
