--- a/robotnordic.css
+++ b/robotnordic.css
@@ -110,6 +110,7 @@
   position: relative;
   margin: 50px;
   text-align: center;
+  letter-spacing: 2px;
 }
 
  /*---------- Login ---------*/
@@ -346,6 +347,7 @@ button{
     font-size: 44px;
     margin: 20px;
     text-align: center;
+    letter-spacing: 2px;
   }
 
    /*---------- Login ---------*/
@@ -572,6 +574,7 @@ button{
   position: relative;
   margin: 50px;
   text-align: center;
+  letter-spacing: 2px;
 }
 
  /*---------- Login ---------*/
