--- a/robotnordic.css
+++ b/robotnordic.css
@@ -1268,6 +1268,8 @@ button{
 
 /*------Template.html----------*/
 
+@media screen and (min-device-width: 181px) and (max-device-width: 767px) {
+
 /*------.accordian------*/
 
 .accordion {
@@ -1507,7 +1509,11 @@ option {
   font-size: 16px;
 }
 
+}
+
 /*---------- panel.html ------------ */
+
+@media screen and (min-device-width: 181px) and (max-device-width: 767px) {
 
 .h1-text{
   top: 120px;
@@ -1716,6 +1722,7 @@ option {
   cursor: pointer;
 }
 
+}
 
 /* slidshow*/
 * {box-sizing: border-box}
