--- a/robotnordic.css
+++ b/robotnordic.css
@@ -1724,6 +1724,429 @@ option {
 
 }
 
+@media screen and (min-device-width: 768px) and (max-width: 1100px) {
+
+  .h1-text{
+    top: 120px;
+    left: 125px;
+    position: absolute;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+  }
+
+  .top-line{
+    position: absolute;
+    top: 160px;
+    width: 80%;
+    left: 40px;
+  }
+
+  .panel-text{
+    position: absolute;
+    top: 170px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+    margin-left: 45px;
+  }
+
+  .fyldnings, .pallenavn, .palletype, .procent{
+    margin-bottom: 10px;
+  }
+
+  .fyldnings, .fyldnings-test{
+    margin-top: 30px;
+  }
+
+  .panel-test{
+    position: absolute;
+    top: 170px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+    margin-left: 295px;
+  }
+
+  .pl-test, .fyldnings-test, .procent-test{
+    margin-bottom: 10px;
+  }
+
+  .visning{
+    top: 420px;
+    left: 90px;
+    position: absolute;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+  }
+
+  .midt-line{
+    position: absolute;
+    top: 450px;
+    width: 80%;
+    left: 40px;
+  }
+
+  .se-palle{
+    position: absolute;
+    top: 470px;
+    left: 135px;
+    font-family: 'Raleway', sans-serif;
+    border:0;
+    background-color: #ffffff;
+    margin: auto;
+    text-align: center;
+    border: 2px solid #FF7152;
+    padding: 14px;
+    width: 30%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+  }
+
+  .kontrol{
+    top: 620px;
+    left: 105px;
+    position: absolute;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+  }
+
+  .bottom-line{
+    position: absolute;
+    top: 650px;
+    width: 80%;
+    left: 40px;
+  }
+
+  .flex-knapper-pl{
+    position: absolute;
+    text-align: center;
+    top: 670px;
+    left: 70px;
+    font-family: 'Raleway', sans-serif;
+  }
+
+  .print, .gem, .plan{
+    border:0;
+    background-color: #313C40;
+    display:block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 24px;
+    width: 80%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+    display: block;
+  }
+
+  .flex-knapper-pl a{
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
+    letter-spacing: 2px;
+  }
+
+  .pak{
+    border:0;
+    background-color: #5eb5eb;
+    display:block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 24px;
+    width: 80%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+    display: block;
+  }
+
+  .back-pil{
+    background-image: url(img/back-pil-01-01.png); /* 16px x 16px */
+     background-color: transparent; /* make the button transparent */
+     background-repeat: no-repeat;  /* make the background image appear only once */
+     background-position: 0px 0px;  /* equivalent to 'top left' */
+     border: none;           /* assuming we don't want any borders */
+     cursor: pointer;        /* make the cursor like hovering over an <a> element */
+     width: 8%;
+     position: absolute;
+     margin: 3%;
+     margin-left: 1%;
+     opacity: 60%;
+  }
+
+
+
+  /*ccs for infoknap*/
+  /* The Modal (baggrund) */
+  .modal-button {
+    width: 28px;
+    height: 28px;
+    background: url(img/infoknap.png);
+    background-repeat: no-repeat;
+    border-radius: 100%;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 2; /* Sit on top */
+    padding-top: 350px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  /* Modal Content */
+  .infoknap-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 95%;
+    z-index: 99;
+  }
+
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+}
+
+@media screen and (min-width: 1101px) {
+
+  .h1-text{
+    top: 120px;
+    left: 125px;
+    position: absolute;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+  }
+
+  .top-line{
+    position: absolute;
+    top: 160px;
+    width: 80%;
+    left: 40px;
+  }
+
+  .panel-text{
+    position: absolute;
+    top: 170px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+    margin-left: 45px;
+  }
+
+  .fyldnings, .pallenavn, .palletype, .procent{
+    margin-bottom: 10px;
+  }
+
+  .fyldnings, .fyldnings-test{
+    margin-top: 30px;
+  }
+
+  .panel-test{
+    position: absolute;
+    top: 170px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+    margin-left: 295px;
+  }
+
+  .pl-test, .fyldnings-test, .procent-test{
+    margin-bottom: 10px;
+  }
+
+  .visning{
+    top: 420px;
+    left: 90px;
+    position: absolute;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+  }
+
+  .midt-line{
+    position: absolute;
+    top: 450px;
+    width: 80%;
+    left: 40px;
+  }
+
+  .se-palle{
+    position: absolute;
+    top: 470px;
+    left: 135px;
+    font-family: 'Raleway', sans-serif;
+    border:0;
+    background-color: #ffffff;
+    margin: auto;
+    text-align: center;
+    border: 2px solid #FF7152;
+    padding: 14px;
+    width: 30%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+  }
+
+  .kontrol{
+    top: 620px;
+    left: 105px;
+    position: absolute;
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+  }
+
+  .bottom-line{
+    position: absolute;
+    top: 650px;
+    width: 80%;
+    left: 40px;
+  }
+
+  .flex-knapper-pl{
+    position: absolute;
+    text-align: center;
+    top: 670px;
+    left: 70px;
+    font-family: 'Raleway', sans-serif;
+  }
+
+  .print, .gem, .plan{
+    border:0;
+    background-color: #313C40;
+    display:block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 24px;
+    width: 80%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+    display: block;
+  }
+
+  .flex-knapper-pl a{
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
+    letter-spacing: 2px;
+  }
+
+  .pak{
+    border:0;
+    background-color: #5eb5eb;
+    display:block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 24px;
+    width: 80%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+    display: block;
+  }
+
+  .back-pil{
+    background-image: url(img/back-pil-01-01.png); /* 16px x 16px */
+     background-color: transparent; /* make the button transparent */
+     background-repeat: no-repeat;  /* make the background image appear only once */
+     background-position: 0px 0px;  /* equivalent to 'top left' */
+     border: none;           /* assuming we don't want any borders */
+     cursor: pointer;        /* make the cursor like hovering over an <a> element */
+     width: 8%;
+     position: absolute;
+     margin: 3%;
+     margin-left: 1%;
+     opacity: 60%;
+  }
+
+
+
+  /*ccs for infoknap*/
+  /* The Modal (baggrund) */
+  .modal-button {
+    width: 28px;
+    height: 28px;
+    background: url(img/infoknap.png);
+    background-repeat: no-repeat;
+    border-radius: 100%;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 2; /* Sit on top */
+    padding-top: 350px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  /* Modal Content */
+  .infoknap-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 95%;
+    z-index: 99;
+  }
+
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+}
+
 /* slidshow*/
 * {box-sizing: border-box}
 body {font-family: Raleway, bold; margin:0}
