--- a/robotnordic.css
+++ b/robotnordic.css
@@ -1511,6 +1511,488 @@ option {
 
 }
 
+@media screen and (min-device-width: 768px) and (max-width: 1100px) {
+
+  .accordion {
+    background-color: #313C40;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 28px;
+    width: 80%;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    font-size: 25px;
+    transition: 0.4s;
+    position: relative;
+    margin: 15% 10% 0 10%;
+  }
+
+  .accordion::after {
+    float: right;
+    transform: scale(1.5);
+  }
+
+  .panel {
+    margin: 0 10% 0 10%;
+    padding: 5% 5% 5% 5%;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+    position: relative;
+    font-size: 20px;
+    border:1px solid #717171;
+    border-radius: 10px;
+
+  }
+
+  .accordion2, .accordion3 {
+    background-color: #2196F3;
+    color: #ffffff;
+    cursor: pointer;
+    width: 100%;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    transition: 0.4s;
+    position: relative;
+    padding: 5% 0 5% 0%;
+    margin: 3% 0 3% 0%;
+    font-size: 16px;
+  }
+
+  .panel2 {
+    padding: 5% 5% 5% 5%;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+    position: relative;
+    font-size: 20px;
+  }
+
+
+  input {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #717171;
+    padding-left: 10px;
+
+  }
+
+  #formularvalg {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #717171;
+    padding-left: 10px;
+  }
+
+  option {
+    font-size: 25px;
+    background-color:#F25835;
+  }
+
+  .dropbtn {
+    background-color: #313C40;
+    color: white;
+    padding: 5% 0 5% 0%;
+    margin: 3% 0 3% 0%;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 10px;
+    z-index: 99;
+
+  }
+
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #717171;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #ffffff;
+    min-width: 160px;
+    overflow: auto;
+    padding: 10% 0 10% 0;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown a:hover {background-color: #ddd;}
+
+  .show {display: block;}
+
+  /* The container */
+  .container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    margin: 0% 0% 5% 0%;
+  }
+
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #white;
+    border: solid 1.5px #313C40;
+  }
+
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #white;
+  }
+
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .Nulstil {
+    position: relative;
+    display: block;
+    background-color: #F25835;
+    color: white;
+    margin: auto;
+    margin-top: 20%;
+    width: 50%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+
+  }
+
+  .GemPalle {
+    position: relative;
+    display: block;
+    background-color: white;
+    border: 1px solid #F25835;
+    color: #F25835;
+    margin: auto;
+    margin-top: 5%;
+    width: 50%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+  }
+
+  .Videre {
+    position: relative;
+    display: block;
+    background-color: #5eb5eb;
+    color: white;
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    width: 50%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+  }
+
+}
+
+@media screen and (min-device-width: 1101px){
+
+  .accordion {
+    background-color: #313C40;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 28px;
+    width: 80%;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    font-size: 25px;
+    transition: 0.4s;
+    position: relative;
+    margin: 15% 10% 0 10%;
+  }
+
+  .accordion::after {
+    float: right;
+    transform: scale(1.5);
+  }
+
+  .panel {
+    margin: 0 10% 0 10%;
+    padding: 5% 5% 5% 5%;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+    position: relative;
+    font-size: 20px;
+    border:1px solid #717171;
+    border-radius: 10px;
+
+  }
+
+  .accordion2, .accordion3 {
+    background-color: #2196F3;
+    color: #ffffff;
+    cursor: pointer;
+    width: 100%;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    transition: 0.4s;
+    position: relative;
+    padding: 5% 0 5% 0%;
+    margin: 3% 0 3% 0%;
+    font-size: 16px;
+  }
+
+  .panel2 {
+    padding: 5% 5% 5% 5%;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+    position: relative;
+    font-size: 20px;
+  }
+
+
+  input {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #717171;
+    padding-left: 10px;
+
+  }
+
+  #formularvalg {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #717171;
+    padding-left: 10px;
+  }
+
+  option {
+    font-size: 25px;
+    background-color:#F25835;
+  }
+
+  .dropbtn {
+    background-color: #313C40;
+    color: white;
+    padding: 5% 0 5% 0%;
+    margin: 3% 0 3% 0%;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 10px;
+    z-index: 99;
+
+  }
+
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #717171;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #ffffff;
+    min-width: 160px;
+    overflow: auto;
+    padding: 10% 0 10% 0;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown a:hover {background-color: #ddd;}
+
+  .show {display: block;}
+
+  /* The container */
+  .container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    margin: 0% 0% 5% 0%;
+  }
+
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #white;
+    border: solid 1.5px #313C40;
+  }
+
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #white;
+  }
+
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .Nulstil {
+    position: relative;
+    display: block;
+    background-color: #F25835;
+    color: white;
+    margin: auto;
+    margin-top: 20%;
+    width: 50%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+
+  }
+
+  .GemPalle {
+    position: relative;
+    display: block;
+    background-color: white;
+    border: 1px solid #F25835;
+    color: #F25835;
+    margin: auto;
+    margin-top: 5%;
+    width: 50%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+  }
+
+  .Videre {
+    position: relative;
+    display: block;
+    background-color: #5eb5eb;
+    color: white;
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    width: 50%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+  }
+
+}
+
 /*---------- panel.html ------------ */
 
 @media screen and (min-device-width: 181px) and (max-device-width: 767px) {
