--- a/robotnordic.css
+++ b/robotnordic.css
@@ -2210,7 +2210,7 @@ option {
 
   .h1-text{
     top: 120px;
-    left: 125px;
+    left: 325px;
     position: absolute;
     color: #000000;
     font-family: 'Raleway', sans-serif;
@@ -2221,7 +2221,7 @@ option {
     position: absolute;
     top: 160px;
     width: 80%;
-    left: 40px;
+    left: 80px;
   }
 
   .panel-text{
@@ -2232,7 +2232,7 @@ option {
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 45px;
+    margin-left: 135px;
   }
 
   .fyldnings, .pallenavn, .palletype, .procent{
@@ -2251,7 +2251,7 @@ option {
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 295px;
+    margin-left: 595px;
   }
 
   .pl-test, .fyldnings-test, .procent-test{
@@ -2260,7 +2260,7 @@ option {
 
   .visning{
     top: 420px;
-    left: 90px;
+    left: 285px;
     position: absolute;
     color: #000000;
     font-family: 'Raleway', sans-serif;
@@ -2271,14 +2271,15 @@ option {
     position: absolute;
     top: 450px;
     width: 80%;
-    left: 40px;
+    left: 80px;
   }
 
   .se-palle{
     position: absolute;
-    top: 470px;
-    left: 135px;
+    top: 510px;
+    left: 280px;
     font-family: 'Raleway', sans-serif;
+    font-size: 18px;
     border:0;
     background-color: #ffffff;
     margin: auto;
@@ -2293,7 +2294,7 @@ option {
 
   .kontrol{
     top: 620px;
-    left: 105px;
+    left: 305px;
     position: absolute;
     color: #000000;
     font-family: 'Raleway', sans-serif;
@@ -2304,14 +2305,14 @@ option {
     position: absolute;
     top: 650px;
     width: 80%;
-    left: 40px;
+    left: 80px;
   }
 
   .flex-knapper-pl{
     position: absolute;
     text-align: center;
     top: 670px;
-    left: 70px;
+    left: 270px;
     font-family: 'Raleway', sans-serif;
   }
 
@@ -2322,7 +2323,7 @@ option {
     margin: 20px auto;
     text-align: center;
     padding: 24px;
-    width: 80%;
+    width: 100%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
@@ -2343,7 +2344,7 @@ option {
     margin: 20px auto;
     text-align: center;
     padding: 24px;
-    width: 80%;
+    width: 100%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
@@ -2421,8 +2422,8 @@ option {
 @media screen and (min-width: 1101px) {
 
   .h1-text{
-    top: 120px;
-    left: 125px;
+    top: 140px;
+    left: 47%;
     position: absolute;
     color: #000000;
     font-family: 'Raleway', sans-serif;
@@ -2431,20 +2432,20 @@ option {
 
   .top-line{
     position: absolute;
-    top: 160px;
+    top: 180px;
     width: 80%;
-    left: 40px;
+    left: 130px;
   }
 
   .panel-text{
     position: absolute;
-    top: 170px;
+    top: 190px;
     color: #000000;
     display: flex;
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 45px;
+    margin-left: 245px;
   }
 
   .fyldnings, .pallenavn, .palletype, .procent{
@@ -2457,13 +2458,13 @@ option {
 
   .panel-test{
     position: absolute;
-    top: 170px;
+    top: 190px;
     color: #000000;
     display: flex;
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 295px;
+    margin-left: 1100px;
   }
 
   .pl-test, .fyldnings-test, .procent-test{
@@ -2472,7 +2473,7 @@ option {
 
   .visning{
     top: 420px;
-    left: 90px;
+    left: 44%;
     position: absolute;
     color: #000000;
     font-family: 'Raleway', sans-serif;
@@ -2483,14 +2484,15 @@ option {
     position: absolute;
     top: 450px;
     width: 80%;
-    left: 40px;
+    left: 130px;
   }
 
   .se-palle{
     position: absolute;
-    top: 470px;
-    left: 135px;
+    top: 520px;
+    left: 525px;
     font-family: 'Raleway', sans-serif;
+    font-size: 20px;
     border:0;
     background-color: #ffffff;
     margin: auto;
@@ -2505,7 +2507,7 @@ option {
 
   .kontrol{
     top: 620px;
-    left: 105px;
+    left: 45.5%;
     position: absolute;
     color: #000000;
     font-family: 'Raleway', sans-serif;
@@ -2516,25 +2518,61 @@ option {
     position: absolute;
     top: 650px;
     width: 80%;
-    left: 40px;
+    left: 130px;
   }
 
   .flex-knapper-pl{
     position: absolute;
+    display: flex;
+    flex-direction: row;
     text-align: center;
     top: 670px;
-    left: 70px;
+    justify-content: space-between;
+    left: 120px;
+    margin-left: 150px;
+    width: 65%;
     font-family: 'Raleway', sans-serif;
   }
 
-  .print, .gem, .plan{
+  .print{
     border:0;
     background-color: #313C40;
     display:block;
     margin: 20px auto;
     text-align: center;
-    padding: 24px;
-    width: 80%;
+    padding: 23px 5px 23px 5px;
+    width: 170%;
+    margin-right: 30px;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+    display: block;
+  }
+
+  .gem{
+    border:0;
+    background-color: #313C40;
+    display:block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 23px 5px 23px 5px;
+    margin-right: 30px;
+    width: 170%;
+    outline: none;
+    border-radius: 18px;
+    transition: 0.25s;
+    display: block;
+  }
+
+  .plan{
+    border:0;
+    background-color: #313C40;
+    display:block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 23px 5px 23px 5px;
+    margin-right: 30px;
+    width: 170%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
@@ -2554,8 +2592,8 @@ option {
     display:block;
     margin: 20px auto;
     text-align: center;
-    padding: 24px;
-    width: 80%;
+    padding: 23px 5px 23px 5px;
+    width: 170%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
