media query done for panel

--- a/robotnordic.css
+++ b/robotnordic.css
@@ -1998,24 +1998,28 @@ option {
 @media screen and (min-device-width: 181px) and (max-device-width: 767px) {
 
 .h1-text{
-  top: 120px;
+  top: 50px;
   left: 125px;
-  position: absolute;
+  position:relative;
   color: #000000;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
 }
 
 .top-line{
-  position: absolute;
-  top: 160px;
+  position:relative;
+  top: 55px;
   width: 80%;
   left: 40px;
 }
 
+.panel-indhold{
+  position: relative;
+}
+
 .panel-text{
-  position: absolute;
-  top: 170px;
+  position:relative;
+  top: 70px;
   color: #000000;
   display: flex;
   flex-direction: column;
@@ -2034,7 +2038,7 @@ option {
 
 .panel-test{
   position: absolute;
-  top: 170px;
+  top: 70px;
   color: #000000;
   display: flex;
   flex-direction: column;
@@ -2048,24 +2052,24 @@ option {
 }
 
 .visning{
-  top: 420px;
+  top: 150px;
   left: 90px;
-  position: absolute;
+  position:relative;
   color: #000000;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
 }
 
 .midt-line{
-  position: absolute;
-  top: 450px;
+  position:relative;
+  top: 155px;
   width: 80%;
   left: 40px;
 }
 
 .se-palle{
-  position: absolute;
-  top: 470px;
+  position:relative;
+  top: 230px;
   left: 135px;
   font-family: 'Raleway', sans-serif;
   border:0;
@@ -2081,26 +2085,26 @@ option {
 }
 
 .kontrol{
-  top: 620px;
+  top: 330px;
   left: 105px;
-  position: absolute;
+  position:relative;
   color: #000000;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
 }
 
 .bottom-line{
-  position: absolute;
-  top: 650px;
+  position:relative;
+  top: 335px;
   width: 80%;
   left: 40px;
 }
 
 .flex-knapper-pl{
-  position: absolute;
+  position: relative;
   text-align: center;
-  top: 670px;
-  left: 70px;
+  top: 370px;
+  left: px;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -2147,6 +2151,7 @@ option {
    border: none;           /* assuming we don't want any borders */
    cursor: pointer;        /* make the cursor like hovering over an <a> element */
    width: 8%;
+   height: 5%;
    position: absolute;
    margin: 3%;
    margin-left: 1%;
@@ -2209,30 +2214,35 @@ option {
 @media screen and (min-device-width: 768px) and (max-width: 1100px) {
 
   .h1-text{
-    top: 120px;
-    left: 325px;
-    position: absolute;
+    top: 50px;
+    left: 43%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .top-line{
-    position: absolute;
-    top: 160px;
+    position: relative;
+    top: 55px;
     width: 80%;
     left: 80px;
   }
 
+.panel-indhold{
+  position: relative;
+}
+
   .panel-text{
-    position: absolute;
-    top: 170px;
+    position: relative;
+    top: 80px;
     color: #000000;
     display: flex;
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 135px;
+    margin-left: 145px;
   }
 
   .fyldnings, .pallenavn, .palletype, .procent{
@@ -2245,13 +2255,13 @@ option {
 
   .panel-test{
     position: absolute;
-    top: 170px;
+    top: 80px;
     color: #000000;
     display: flex;
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 595px;
+    margin-left: 580px;
   }
 
   .pl-test, .fyldnings-test, .procent-test{
@@ -2259,27 +2269,28 @@ option {
   }
 
   .visning{
-    top: 420px;
-    left: 285px;
-    position: absolute;
+    top: 220px;
+    left: 37.5%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .midt-line{
-    position: absolute;
-    top: 450px;
+    position: relative;
+    top: 225px;
     width: 80%;
     left: 80px;
   }
 
   .se-palle{
-    position: absolute;
-    top: 510px;
+    position: relative;
+    top: 320px;
     left: 280px;
     font-family: 'Raleway', sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     border:0;
     background-color: #ffffff;
     margin: auto;
@@ -2293,27 +2304,29 @@ option {
   }
 
   .kontrol{
-    top: 620px;
-    left: 305px;
-    position: absolute;
+    top: 420px;
+    left: 40.5%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .bottom-line{
-    position: absolute;
-    top: 650px;
+    position: relative;
+    top: 425px;
     width: 80%;
     left: 80px;
   }
 
   .flex-knapper-pl{
-    position: absolute;
+    position: relative;
     text-align: center;
-    top: 670px;
-    left: 270px;
+    top: 470px;
+    left: 85px;
     font-family: 'Raleway', sans-serif;
+    width: 80%;
   }
 
   .print, .gem, .plan{
@@ -2323,7 +2336,7 @@ option {
     margin: 20px auto;
     text-align: center;
     padding: 24px;
-    width: 100%;
+    width: 40%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
@@ -2344,7 +2357,7 @@ option {
     margin: 20px auto;
     text-align: center;
     padding: 24px;
-    width: 100%;
+    width: 40%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
@@ -2422,24 +2435,28 @@ option {
 @media screen and (min-width: 1101px) {
 
   .h1-text{
-    top: 140px;
+    top: 50px;
     left: 47%;
-    position: absolute;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .top-line{
-    position: absolute;
-    top: 180px;
+    position: relative;
+    top: 55px;
     width: 80%;
     left: 130px;
   }
 
+.panel-indhold{
+  position: relative;
+}
+
   .panel-text{
-    position: absolute;
-    top: 190px;
+    position: relative;
+    top: 80px;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -2458,7 +2475,7 @@ option {
 
   .panel-test{
     position: absolute;
-    top: 190px;
+    top: 80px;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -2472,24 +2489,24 @@ option {
   }
 
   .visning{
-    top: 420px;
+    top: 220px;
     left: 44%;
-    position: absolute;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .midt-line{
-    position: absolute;
-    top: 450px;
+    position: relative;
+    top: 225px;
     width: 80%;
     left: 130px;
   }
 
   .se-palle{
-    position: absolute;
-    top: 520px;
+    position: relative;
+    top: 320px;
     left: 525px;
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
@@ -2506,27 +2523,27 @@ option {
   }
 
   .kontrol{
-    top: 620px;
+    top: 420px;
     left: 45.5%;
-    position: absolute;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .bottom-line{
-    position: absolute;
-    top: 650px;
+    position: relative;
+    top: 425px;
     width: 80%;
     left: 130px;
   }
 
   .flex-knapper-pl{
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: row;
     text-align: center;
-    top: 670px;
+    top: 470px;
     justify-content: space-between;
     left: 120px;
     margin-left: 150px;
