--- a/robotnordic.css
+++ b/robotnordic.css
@@ -1268,7 +1268,7 @@ button{
 
 /*------Template.html----------*/
 
-@media screen and (min-device-width: 181px) and (max-device-width: 767px) {
+@media screen and (min-device-width: 181px ) and (max-device-width: 767px ) {
 
 /*------.accordian------*/
 
@@ -1510,6 +1510,7 @@ option {
 }
 
 }
+
 
 @media screen and (min-device-width: 768px) and (max-width: 1100px) {
 
@@ -1995,7 +1996,7 @@ option {
 
 /*---------- panel.html ------------ */
 
-@media screen and (min-device-width: 181px) and (max-device-width: 767px) {
+@media screen and (min-device-width: 181px) and (max-dev-width: 767px) {
 
 .h1-text{
   top: 120px;
@@ -2727,8 +2728,4 @@ img {vertical-align: middle;}
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
-}
-
-@@media query {
-
 }
