--- a/robotnordic.css
+++ b/robotnordic.css
@@ -669,30 +669,37 @@ option {
 /*---------- panel.html ------------ */
 
 .h1-text{
-  top: 120px;
+  top: 50px;
   left: 125px;
-  position: absolute;
+  width: 40%;
+  position: relative;
   color: #000000;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
 }
 
 .top-line{
-  position: absolute;
-  top: 160px;
+  position: relative;
+  top: 55px;
   width: 80%;
   left: 40px;
 }
 
+.panel-indhold{
+  position: relative;
+  width: 80%;
+  margin: auto;
+}
+
 .panel-text{
-  position: absolute;
-  top: 170px;
+  position: relative;
+  top: 70px;
   color: #000000;
   display: flex;
   flex-direction: column;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
-  margin-left: 45px;
+  margin-left: 30px;
 }
 
 .fyldnings, .pallenavn, .palletype, .procent{
@@ -705,13 +712,13 @@ option {
 
 .panel-test{
   position: absolute;
-  top: 170px;
+  top: 70px;
   color: #000000;
   display: flex;
   flex-direction: column;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
-  margin-left: 295px;
+  margin-left: 235px;
 }
 
 .pl-test, .fyldnings-test, .procent-test{
@@ -719,24 +726,25 @@ option {
 }
 
 .visning{
-  top: 420px;
-  left: 90px;
-  position: absolute;
+  top: 120px;
+  left: 80px;
+  width: 65%;
+  position: relative;
   color: #000000;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
 }
 
 .midt-line{
-  position: absolute;
-  top: 450px;
+  position: relative;
+  top: 125px;
   width: 80%;
   left: 40px;
 }
 
 .se-palle{
-  position: absolute;
-  top: 470px;
+  position: relative;
+  top: 170px;
   left: 135px;
   font-family: 'Raleway', sans-serif;
   border:0;
@@ -752,26 +760,26 @@ option {
 }
 
 .kontrol{
-  top: 620px;
+  top: 240px;
   left: 105px;
-  position: absolute;
+  width: 50%;
+  position: relative;
   color: #000000;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 2px;
 }
 
 .bottom-line{
-  position: absolute;
-  top: 650px;
+  position: relative;
+  top: 245px;
   width: 80%;
   left: 40px;
 }
 
 .flex-knapper-pl{
-  position: absolute;
+  position: relative;
   text-align: center;
-  top: 670px;
-  left: 70px;
+  top: 270px;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -1544,24 +1552,32 @@ option {
 
 
   .h1-text{
-    top: 120px;
-    left: 125px;
-    position: absolute;
+    top: 50px;
+    left: 43%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .top-line{
-    position: absolute;
-    top: 160px;
+    position: relative;
+    top: 55px;
     width: 80%;
-    left: 40px;
+    left: 80px;
+  }
+
+  .panel-indhold{
+    position: relative;
+    width: 60%;
+    margin: auto;
+    left: 50px;
   }
 
   .panel-text{
-    position: absolute;
-    top: 170px;
+    position: relative;
+    top: 70px;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -1580,7 +1596,7 @@ option {
 
   .panel-test{
     position: absolute;
-    top: 170px;
+    top: 70px;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -1594,25 +1610,26 @@ option {
   }
 
   .visning{
-    top: 420px;
-    left: 90px;
-    position: absolute;
+    top: 180px;
+    left: 38%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .midt-line{
-    position: absolute;
-    top: 450px;
+    position: relative;
+    top: 185px;
     width: 80%;
-    left: 40px;
+    left: 80px;
   }
 
   .se-palle{
-    position: absolute;
-    top: 470px;
-    left: 135px;
+    position: relative;
+    top: 250px;
+    left: 285px;
     font-family: 'Raleway', sans-serif;
     border:0;
     background-color: #ffffff;
@@ -1627,26 +1644,26 @@ option {
   }
 
   .kontrol{
-    top: 620px;
-    left: 105px;
-    position: absolute;
+    top: 320px;
+    left: 41%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .bottom-line{
-    position: absolute;
-    top: 650px;
+    position: relative;
+    top: 325px;
     width: 80%;
-    left: 40px;
+    left: 80px;
   }
 
   .flex-knapper-pl{
-    position: absolute;
+    position: relative;
     text-align: center;
-    top: 670px;
-    left: 70px;
+    top: 370px;
     font-family: 'Raleway', sans-serif;
   }
 
@@ -2412,19 +2429,20 @@ button{
 
 
   .h1-text{
-    top: 120px;
-    left: 125px;
-    position: absolute;
+    top: 50px;
+    left: 47%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .top-line{
-    position: absolute;
-    top: 160px;
+    position: relative;
+    top: 55px;
     width: 80%;
-    left: 40px;
+    left: 160px;
   }
 
 .panel-indhold{
@@ -2434,8 +2452,8 @@ button{
 }
 
   .panel-text{
-    position: absolute;
-    top: 170px;
+    position: relative;
+    top: 70px;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -2454,13 +2472,13 @@ button{
 
   .panel-test{
     position: absolute;
-    top: 170px;
+    top: 70px;
     color: #000000;
     display: flex;
     flex-direction: column;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
-    margin-left: 295px;
+    margin-left: 1095px;
   }
 
   .pl-test, .fyldnings-test, .procent-test{
@@ -2468,26 +2486,28 @@ button{
   }
 
   .visning{
-    top: 420px;
-    left: 90px;
-    position: absolute;
+    top: 220px;
+    left: 44%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .midt-line{
-    position: absolute;
-    top: 450px;
+    position: relative;
+    top: 225px;
     width: 80%;
-    left: 40px;
+    left: 160px;
   }
 
   .se-palle{
-    position: absolute;
-    top: 470px;
-    left: 135px;
+    position: relative;
+    top: 370px;
+    left: 535px;
     font-family: 'Raleway', sans-serif;
+    font-size: 20px;
     border:0;
     background-color: #ffffff;
     margin: auto;
@@ -2501,26 +2521,31 @@ button{
   }
 
   .kontrol{
-    top: 620px;
-    left: 105px;
-    position: absolute;
+    top: 520px;
+    left: 45%;
+    width: 40%;
+    position: relative;
     color: #000000;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
   }
 
   .bottom-line{
-    position: absolute;
-    top: 650px;
+    position: relative;
+    top: 525px;
     width: 80%;
-    left: 40px;
+    left: 160px;
   }
 
   .flex-knapper-pl{
-    position: absolute;
+    position: relative;
     text-align: center;
-    top: 670px;
-    left: 70px;
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    top: 570px;
+    left: 110px;
+    width: 90%;
     font-family: 'Raleway', sans-serif;
   }
 
@@ -2528,10 +2553,10 @@ button{
     border:0;
     background-color: #313C40;
     display:block;
-    margin: 20px auto;
+    margin: 20px auto auto 10px;
     text-align: center;
     padding: 24px;
-    width: 80%;
+    width: 20%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
@@ -2549,10 +2574,10 @@ button{
     border:0;
     background-color: #5eb5eb;
     display:block;
-    margin: 20px auto;
+    margin: 20px auto auto 10px;
     text-align: center;
     padding: 24px;
-    width: 80%;
+    width: 20%;
     outline: none;
     border-radius: 18px;
     transition: 0.25s;
