--- a/robotnordic.css
+++ b/robotnordic.css
@@ -56,7 +56,7 @@
 
 .sidebar a {
   font-family: 'Raleway', sans-serif;
-  color:#F25835;
+  color:white;
   padding: 23px 25px;
   text-decoration: none;
   font-size: 30px;
@@ -446,6 +446,25 @@ button{
   margin: 15% 10% 0 10%;
 }
 
+.accordion2 {
+  background-color: #313C40;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 28px;
+  width: 80%;
+  align-items: center;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  outline: none;
+  font-size: 25px;
+  transition: 0.4s;
+  position: relative;
+  margin: auto;
+  display: block;
+  margin-top: 5%;
+}
+
 .accordion::after {
   float: right;
   transform: scale(1.5);
@@ -464,7 +483,7 @@ button{
 
 }
 
-.accordion2, .accordion3 {
+.accordion3 {
   background-color: #2196F3;
   color: #ffffff;
   cursor: pointer;
@@ -928,7 +947,7 @@ option {
 
   .sidebar a {
     font-family: 'Raleway', sans-serif;
-    color:#F25835;
+    color:white;
     padding: 23px 25px;
     text-decoration: none;
     font-size: 30px;
@@ -1310,7 +1329,7 @@ option {
     color: #ffffff;
     cursor: pointer;
     padding: 28px;
-    width: 80%;
+    width: 50%;
     align-items: center;
     border: none;
     border-radius: 10px;
@@ -1319,7 +1338,28 @@ option {
     font-size: 25px;
     transition: 0.4s;
     position: relative;
-    margin: 15% 10% 0 10%;
+    margin: auto;
+    display: block;
+    margin-top: 10%;
+  }
+
+  .accordion2 {
+    background-color: #313C40;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 28px;
+    width: 50%;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    font-size: 25px;
+    transition: 0.4s;
+    position: relative;
+    margin: auto;
+    display: block;
+    margin-top: 5%;
   }
 
   .accordion::after {
@@ -1328,7 +1368,7 @@ option {
   }
 
   .panel {
-    margin: 0 10% 0 10%;
+    margin: 0 25% 0 25%;
     padding: 5% 5% 5% 5%;
     display: none;
     background-color: white;
@@ -1340,7 +1380,7 @@ option {
 
   }
 
-  .accordion2, .accordion3 {
+  .accordion3 {
     background-color: #2196F3;
     color: #ffffff;
     cursor: pointer;
@@ -1502,12 +1542,12 @@ option {
 
   .Nulstil {
     position: relative;
-    display: block;
+    display: inline-block;
     background-color: #F25835;
     color: white;
-    margin: auto;
-    margin-top: 20%;
-    width: 50%;
+    margin-top: 10%;
+    margin-left: 20%;
+    width: 20%;
     padding: 3% 3% 3% 3%;
     border-radius: 10px;
     font-size: 16px;
@@ -1516,13 +1556,12 @@ option {
 
   .GemPalle {
     position: relative;
-    display: block;
+    display: inline-block;
     background-color: white;
     border: 1px solid #F25835;
     color: #F25835;
-    margin: auto;
     margin-top: 5%;
-    width: 50%;
+    width: 20%;
     padding: 3% 3% 3% 3%;
     border-radius: 10px;
     font-size: 16px;
@@ -1530,13 +1569,12 @@ option {
 
   .Videre {
     position: relative;
-    display: block;
+    display: inline-block;
     background-color: #5eb5eb;
     color: white;
-    margin: auto;
     margin-top: 5%;
     margin-bottom: 10%;
-    width: 50%;
+    width: 20%;
     padding: 3% 3% 3% 3%;
     border-radius: 10px;
     font-size: 16px;
@@ -1789,7 +1827,7 @@ option {
 
 .sidebar a {
   font-family: 'Raleway', sans-serif;
-  color:#F25835;
+  color:white;
   padding: 23px 25px;
   text-decoration: none;
   font-size: 30px;
@@ -2190,6 +2228,25 @@ button{
     margin: 15% 10% 0 10%;
   }
 
+  .accordion2 {
+    background-color: #313C40;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 28px;
+    width: 80%;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    font-size: 25px;
+    transition: 0.4s;
+    position: relative;
+    margin: auto;
+    display: block;
+    margin-top: 5%;
+  }
+
   .accordion::after {
     float: right;
     transform: scale(1.5);
@@ -2208,7 +2265,7 @@ button{
 
   }
 
-  .accordion2, .accordion3 {
+  .accordion3 {
     background-color: #2196F3;
     color: #ffffff;
     cursor: pointer;
