--- a/robotnordic.css
+++ b/robotnordic.css
@@ -2036,6 +2036,8 @@ option {
  float: left;
  width: 100%;
  z-index: 1;
+ overflow-y: scroll;
+
 }
 
 
@@ -2622,6 +2624,7 @@ button{
     padding: 5% 0 5% 0%;
     margin: 3% 0 3% 0%;
     font-size: 16px;
+    display: block;
   }
 
   .panel2 {
