panel og css valideret

--- a/robotnordic.css
+++ b/robotnordic.css
@@ -3,10 +3,9 @@
   padding: 0;
   font-family: Raleway;
   letter-spacing: 2px;
-
 }
 
-@media screen and (min-device-width: 181px) and (max-device-width: 767px) {
+@media screen and (min-width: 181px) and (max-width: 767px) {
 
   /* font til tekst: font-family: 'Raleway', sans-serif; */
 /* font til tal: font-family: 'Source Sans Pro', sans-serif; */
@@ -248,7 +247,7 @@ button{
 
 }
 
-@media screen and (min-device-width: 181px) and (max-device-width: 767px) {
+@media screen and (min-width: 181px) and (max-width: 767px) {
 /*---------- forside.html ---------*/
 /* slidshow*/
 * {box-sizing: border-box}
@@ -539,7 +538,7 @@ img {vertical-align: middle;}
 
 }
 
-@media screen and (min-device-width: 181px ) and (max-device-width: 767px ) {
+@media screen and (min-width: 181px ) and (max-width: 767px ) {
 
 /*------.accordian------*/
 
@@ -726,13 +725,13 @@ option {
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: #white;
+  background-color: white;
   border: solid 1.5px #313C40;
 }
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
-  background-color: #white;
+  background-color: white;
 }
 
 /* When the checkbox is checked, add a blue background */
@@ -960,17 +959,16 @@ option {
 }
 
 .back-pil{
-  background-image: url(img/back-pil-01-01.png); /* 16px x 16px */
-   background-color: transparent; /* make the button transparent */
-   background-repeat: no-repeat;  /* make the background image appear only once */
-   background-position: 0px 0px;  /* equivalent to 'top left' */
-   border: none;           /* assuming we don't want any borders */
-   cursor: pointer;        /* make the cursor like hovering over an <a> element */
-   width: 8%;
-   position: absolute;
-   margin: 3%;
-   margin-left: 1%;
-   opacity: 60%;
+  background-color: transparent; /* make the button transparent */
+  background-repeat: no-repeat;  /* make the background image appear only once */
+  background-position: 0px 0px;  /* equivalent to 'top left' */
+  border: none;           /* assuming we don't want any borders */
+  cursor: pointer;        /* make the cursor like hovering over an <a> element */
+  width: 8%;
+  position: absolute;
+  margin: 3%;
+  margin-left: 1%;
+ opacity: 60%;
 }
 
 
@@ -1028,7 +1026,7 @@ option {
 }
 
 
-@media screen and (min-device-width: 768px) and (max-width: 1100px) {
+@media screen and (min-width: 768px) and (max-width: 1100px) {
 
 
     /* font til tekst: font-family: 'Raleway', sans-serif; */
@@ -1275,7 +1273,7 @@ option {
 
 }
 
-@media screen and (min-device-width: 768px) and (max-width: 1100px) {
+@media screen and (min-width: 768px) and (max-width: 1100px) {
 
   /*---------- forside.html ---------*/
 
@@ -1562,7 +1560,7 @@ option {
 
 }
 
-@media screen and (min-device-width: 768px) and (max-width: 1100px) {
+@media screen and (min-width: 768px) and (max-width: 1100px) {
 
   .accordion {
     background-color: #313C40;
@@ -1741,13 +1739,13 @@ option {
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: #white;
+    background-color: white;
     border: solid 1.5px #313C40;
   }
 
   /* On mouse-over, add a grey background color */
   .container:hover input ~ .checkmark {
-    background-color: #white;
+    background-color: white;
   }
 
   /* When the checkbox is checked, add a blue background */
@@ -2572,7 +2570,7 @@ button{
 
 /*------Template.html----------*/
 
-@media screen and (min-device-width: 1101px){
+@media screen and (min-width: 1101px){
 
   .accordion {
     background-color: #313C40;
@@ -2753,13 +2751,13 @@ button{
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: #white;
+    background-color: white;
     border: solid 1.5px #313C40;
   }
 
   /* On mouse-over, add a grey background color */
   .container:hover input ~ .checkmark {
-    background-color: #white;
+    background-color: white;
   }
 
   /* When the checkbox is checked, add a blue background */
