--- a/robotnordic.css
+++ b/robotnordic.css
@@ -2812,7 +2812,7 @@ button{
     font-size: 16px;
   }
 
-  .Videre {
+/*  .knap {
     position: relative;
     display: inline-block;
     background-color: #5eb5eb;
@@ -2823,7 +2823,7 @@ button{
     border-radius: 10px;
     font-size: 16px;
   }
-
+*/
 
 
   .h1-text{
@@ -3047,4 +3047,52 @@ button{
     cursor: pointer;
   }
 
+}
+/* style på er du sikker knap*/
+.knap {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    position: relative;
+    display: inline-block;
+    background-color: #5eb5eb;
+    color: white;
+    margin-top: 5%;
+    width: 15%;
+    padding: 3% 3% 3% 3%;
+    border-radius: 10px;
+    font-size: 16px;
+  }
+}
+
+/* Modal Content */
+.vindue-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
