--- a/robotnordic.css
+++ b/robotnordic.css
@@ -2972,6 +2972,7 @@ button{
     border:0;
     background-color: #5eb5eb;
     display:block;
+    color: #ffffff;
     margin: 20px auto auto 10px;
     text-align: center;
     padding: 24px;
